# Ace

./: .env.example  README.md  pyproject.toml
ace/: main.py  orchestrator.py
ace/browser/: connector.py  launcher.py  lock.py  manager.py  utils.py
ace/cli/: config.py  debug.py  launch.py  run.py
ace/config/: __init__.py  settings.py
ace/llm/: client.py  engine.py  groq_compat.py  models.py  prompts.py
ace/quiz/: __init__.py  loop.py  models.py  prompts.py
docs/superpowers/plans/: 2026-04-07-quiz-loop.md  2026-04-08-iframe-platform-support.md  2026-04-09-llm-navigation.md
docs/superpowers/specs/: 2026-04-07-quiz-loop-design.md  2026-04-08-iframe-platform-support-design.md  2026-04-09-llm-navigation-design.md
tests/quiz/: test_loop.py  test_models.py  test_prompts.py
