[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ace"
version = "0.1.0"
description = "CLI tool that automates academic assignments on Canvas, Pearson, and similar platforms"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "playwright>=1.44.0",
    "anthropic>=0.28.0",
    "instructor>=1.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "markdownify>=0.12.1",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
]

[project.scripts]
ace = "ace.main:app"

[tool.hatch.build.targets.wheel]
packages = ["ace"]
