[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ace"
version = "0.1.0"
description = "CLI tool that automates academic assignments using an AI browser agent"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "playwright>=1.44.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "browser-use>=0.1.0",
    "langchain-anthropic>=0.3.0",
]

[project.scripts]
ace = "ace.main:app"

[tool.hatch.build.targets.wheel]
packages = ["ace"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
